# churn-prediction-app

./: README.md  app.py  notebook.ipynb  pyproject.toml
