[project]
name = "churn-prediction-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
]
